--- a/web/index.html
+++ b/web/index.html
@@ -1,3 +1,244 @@
+<!--<!DOCTYPE html>-->
+<!--<html lang="en">-->
+<!--<head>-->
+<!--    <meta charset="UTF-8">-->
+<!--    <meta name="viewport" content="width=device-width, initial-scale=1.0">-->
+<!--    <title>EdgeVisionRT Web Viewer</title>-->
+<!--    <style>-->
+<!--        * {-->
+<!--            margin: 0;-->
+<!--            padding: 0;-->
+<!--            box-sizing: border-box;-->
+<!--        }-->
+
+<!--        body {-->
+<!--            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;-->
+<!--            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);-->
+<!--            min-height: 100vh;-->
+<!--            padding: 20px;-->
+<!--        }-->
+
+<!--        .container {-->
+<!--            max-width: 1400px;-->
+<!--            margin: 0 auto;-->
+<!--            background: white;-->
+<!--            padding: 30px;-->
+<!--            border-radius: 15px;-->
+<!--            box-shadow: 0 10px 40px rgba(0,0,0,0.2);-->
+<!--        }-->
+
+<!--        h1 {-->
+<!--            color: #333;-->
+<!--            text-align: center;-->
+<!--            margin-bottom: 10px;-->
+<!--            font-size: 32px;-->
+<!--        }-->
+
+<!--        .subtitle {-->
+<!--            text-align: center;-->
+<!--            color: #666;-->
+<!--            margin-bottom: 30px;-->
+<!--            font-size: 14px;-->
+<!--        }-->
+
+
+<!--        .images-container {-->
+<!--            display: grid;-->
+<!--            grid-template-columns: 1fr 1fr;-->
+<!--            gap: 20px;-->
+<!--            margin: 25px 0;-->
+<!--        }-->
+
+<!--        .image-section {-->
+<!--            background: #000;-->
+<!--            border-radius: 10px;-->
+<!--            padding: 15px;-->
+<!--            border: 3px solid #667eea;-->
+<!--        }-->
+
+<!--        .image-section h3 {-->
+<!--            color: white;-->
+<!--            text-align: center;-->
+<!--            margin-bottom: 10px;-->
+<!--            font-size: 18px;-->
+<!--            background: rgba(102, 126, 234, 0.3);-->
+<!--            padding: 8px;-->
+<!--            border-radius: 5px;-->
+<!--        }-->
+
+<!--        .image-section img {-->
+<!--            width: 100%;-->
+<!--            height: auto;-->
+<!--            display: block;-->
+<!--            border-radius: 5px;-->
+<!--            min-height: 400px;-->
+<!--            object-fit: contain;-->
+<!--            background: #1a1a1a;-->
+<!--        }-->
+
+<!--        .stats {-->
+<!--            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);-->
+<!--            padding: 25px;-->
+<!--            border-radius: 10px;-->
+<!--            margin-top: 25px;-->
+<!--            color: white;-->
+<!--        }-->
+
+<!--        .stats h3 {-->
+<!--            margin-bottom: 20px;-->
+<!--            font-size: 22px;-->
+<!--            text-align: center;-->
+<!--        }-->
+
+<!--        .stats-grid {-->
+<!--            display: grid;-->
+<!--            grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));-->
+<!--            gap: 15px;-->
+<!--        }-->
+
+<!--        .stat-item {-->
+<!--            background: rgba(255, 255, 255, 0.15);-->
+<!--            padding: 20px;-->
+<!--            border-radius: 10px;-->
+<!--            backdrop-filter: blur(10px);-->
+<!--            text-align: center;-->
+<!--            border: 1px solid rgba(255, 255, 255, 0.2);-->
+<!--        }-->
+
+<!--        .stat-label {-->
+<!--            font-size: 13px;-->
+<!--            opacity: 0.9;-->
+<!--            margin-bottom: 8px;-->
+<!--            text-transform: uppercase;-->
+<!--            letter-spacing: 1px;-->
+<!--        }-->
+
+<!--        .stat-value {-->
+<!--            font-size: 24px;-->
+<!--            font-weight: bold;-->
+<!--        }-->
+
+<!--        .status-badge {-->
+<!--            display: inline-block;-->
+<!--            padding: 8px 20px;-->
+<!--            border-radius: 20px;-->
+<!--            font-size: 14px;-->
+<!--            font-weight: bold;-->
+<!--        }-->
+
+<!--        .status-ready {-->
+<!--            background: #28a745;-->
+<!--            color: white;-->
+<!--        }-->
+
+<!--        .status-waiting {-->
+<!--            background: #ffc107;-->
+<!--            color: #333;-->
+<!--        }-->
+
+<!--        .tech-stack {-->
+<!--            background: #f8f9fa;-->
+<!--            padding: 20px;-->
+<!--            border-radius: 8px;-->
+<!--            margin-top: 20px;-->
+<!--        }-->
+
+<!--        .tech-stack h4 {-->
+<!--            color: #333;-->
+<!--            margin-bottom: 10px;-->
+<!--        }-->
+
+<!--        .tech-tags {-->
+<!--            display: flex;-->
+<!--            flex-wrap: wrap;-->
+<!--            gap: 10px;-->
+<!--        }-->
+
+<!--        .tech-tag {-->
+<!--            background: #667eea;-->
+<!--            color: white;-->
+<!--            padding: 6px 15px;-->
+<!--            border-radius: 15px;-->
+<!--            font-size: 12px;-->
+<!--            font-weight: 500;-->
+<!--        }-->
+
+<!--        @media (max-width: 768px) {-->
+<!--            .images-container {-->
+<!--                grid-template-columns: 1fr;-->
+<!--            }-->
+<!--        }-->
+<!--    </style>-->
+<!--</head>-->
+<!--<body>-->
+<!--<div class="container">-->
+<!--    <h1>🎥 EdgeVisionRT Web Viewer</h1>-->
+<!--    <p class="subtitle">Real-time Edge Detection Comparison - TypeScript Implementation</p>-->
+
+<!--    <div class="images-container">-->
+<!--        <div class="image-section">-->
+<!--            <h3>🎬 Raw Camera Feed</h3>-->
+<!--            <img id="raw-display" src="raw_frame.jpg" alt="Add raw_frame.jpg to web folder"-->
+<!--                 onerror="this.alt='Raw frame not found. Add raw_frame.jpg to web folder.'">-->
+<!--        </div>-->
+<!--        <div class="image-section">-->
+<!--            <h3>⚡ Edge Detection Output</h3>-->
+<!--            <img id="edge-display" src="edge_frame.jpg" alt="Add edge_frame.jpg to web folder"-->
+<!--                 onerror="this.alt='Edge frame not found. Add edge_frame.jpg to web folder.'">-->
+<!--        </div>-->
+<!--    </div>-->
+
+<!--    <div class="stats">-->
+<!--        <h3>📊 Frame Statistics</h3>-->
+<!--        <div class="stats-grid">-->
+<!--            <div class="stat-item">-->
+<!--                <div class="stat-label">Raw Frame Resolution</div>-->
+<!--                <div class="stat-value" id="raw-resolution">Loading...</div>-->
+<!--            </div>-->
+<!--            <div class="stat-item">-->
+<!--                <div class="stat-label">Edge Frame Resolution</div>-->
+<!--                <div class="stat-value" id="edge-resolution">Loading...</div>-->
+<!--            </div>-->
+<!--            <div class="stat-item">-->
+<!--                <div class="stat-label">FPS (Android App)</div>-->
+<!--                <div class="stat-value" id="fps">15-20</div>-->
+<!--            </div>-->
+<!--            <div class="stat-item">-->
+<!--                <div class="stat-label">Processing Algorithm</div>-->
+<!--                <div class="stat-value">Sobel Filter</div>-->
+<!--            </div>-->
+<!--            <div class="stat-item">-->
+<!--                <div class="stat-label">Processing Time</div>-->
+<!--                <div class="stat-value">~20ms</div>-->
+<!--            </div>-->
+<!--            <div class="stat-item">-->
+<!--                <div class="stat-label">Status</div>-->
+<!--                <div class="stat-value">-->
+<!--                    <span id="status" class="status-badge status-waiting">Loading</span>-->
+<!--                </div>-->
+<!--            </div>-->
+<!--        </div>-->
+<!--    </div>-->
+
+<!--    <div class="tech-stack">-->
+<!--        <h4>🛠️ Technology Stack</h4>-->
+<!--        <div class="tech-tags">-->
+<!--            <span class="tech-tag">Android (Kotlin)</span>-->
+<!--            <span class="tech-tag">C++ (JNI/NDK)</span>-->
+<!--            <span class="tech-tag">OpenGL ES 2.0</span>-->
+<!--            <span class="tech-tag">Camera2 API</span>-->
+<!--            <span class="tech-tag">TypeScript</span>-->
+<!--            <span class="tech-tag">HTML5</span>-->
+<!--            <span class="tech-tag">Edge Detection (Sobel)</span>-->
+<!--            <span class="tech-tag">Real-time Processing</span>-->
+<!--        </div>-->
+<!--    </div>-->
+<!--</div>-->
+
+<!--<script type="module" src="dist/viewer.js"></script>-->
+<!--</body>-->
+<!--</html>-->
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -5,54 +246,238 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>EdgeVisionRT Web Viewer</title>
     <style>
-        body {
-            font-family: Arial, sans-serif;
-            max-width: 800px;
-            margin: 50px auto;
-            padding: 20px;
-            background: #f5f5f5;
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
         }
+
+        body {
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+            min-height: 100vh;
+            padding: 20px;
+        }
+
         .container {
+            max-width: 1400px;
+            margin: 0 auto;
             background: white;
             padding: 30px;
-            border-radius: 10px;
-            box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+            border-radius: 15px;
+            box-shadow: 0 10px 40px rgba(0,0,0,0.2);
         }
+
         h1 {
             color: #333;
             text-align: center;
+            margin-bottom: 10px;
+            font-size: 32px;
         }
-        #frame-display {
-            width: 100%;
-            max-width: 640px;
-            margin: 20px auto;
-            display: block;
-            border: 2px solid #ddd;
-            border-radius: 5px;
+
+        .subtitle {
+            text-align: center;
+            color: #666;
+            margin-bottom: 30px;
+            font-size: 14px;
         }
-        .stats {
-            background: #f9f9f9;
+
+        .images-container {
+            display: grid;
+            grid-template-columns: 1fr 1fr;
+            gap: 20px;
+            margin: 25px 0;
+        }
+
+        .image-section {
+            background: #000;
+            border-radius: 10px;
             padding: 15px;
+            border: 3px solid #667eea;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+        }
+
+        .image-section h3 {
+            color: white;
+            text-align: center;
+            margin-bottom: 10px;
+            font-size: 18px;
+            background: rgba(102, 126, 234, 0.3);
+            padding: 8px;
             border-radius: 5px;
+            width: 100%;
+        }
+
+        .image-wrapper {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            width: 100%;
+            min-height: 500px;
+            background: #1a1a1a;
+            border-radius: 5px;
+        }
+
+        .image-section img {
+            max-height: 600px;
+            height: auto;
+            display: block;
+            border-radius: 5px;
+            object-fit: contain;
+            transform: rotate(270deg);
+        }
+
+        .stats {
+            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+            padding: 25px;
+            border-radius: 10px;
+            margin-top: 25px;
+            color: white;
+        }
+
+        .stats h3 {
+            margin-bottom: 20px;
+            font-size: 22px;
+            text-align: center;
+        }
+
+        .stats-grid {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+            gap: 15px;
+        }
+
+        .stat-item {
+            background: rgba(255, 255, 255, 0.15);
+            padding: 20px;
+            border-radius: 10px;
+            backdrop-filter: blur(10px);
+            text-align: center;
+            border: 1px solid rgba(255, 255, 255, 0.2);
+        }
+
+        .stat-label {
+            font-size: 13px;
+            opacity: 0.9;
+            margin-bottom: 8px;
+            text-transform: uppercase;
+            letter-spacing: 1px;
+        }
+
+        .stat-value {
+            font-size: 24px;
+            font-weight: bold;
+        }
+
+        .status-badge {
+            display: inline-block;
+            padding: 8px 20px;
+            border-radius: 20px;
+            font-size: 14px;
+            font-weight: bold;
+            background: #28a745;
+            color: white;
+        }
+
+        .tech-stack {
+            background: #f8f9fa;
+            padding: 20px;
+            border-radius: 8px;
             margin-top: 20px;
         }
-        .stat-item {
-            margin: 5px 0;
-            font-size: 14px;
+
+        .tech-stack h4 {
+            color: #333;
+            margin-bottom: 10px;
+        }
+
+        .tech-tags {
+            display: flex;
+            flex-wrap: wrap;
+            gap: 10px;
+        }
+
+        .tech-tag {
+            background: #667eea;
+            color: white;
+            padding: 6px 15px;
+            border-radius: 15px;
+            font-size: 12px;
+            font-weight: 500;
+        }
+
+        @media (max-width: 768px) {
+            .images-container {
+                grid-template-columns: 1fr;
+            }
         }
     </style>
 </head>
 <body>
 <div class="container">
     <h1>🎥 EdgeVisionRT Web Viewer</h1>
-    <img id="frame-display" src="" alt="Processed frame will appear here">
+    <p class="subtitle">Real-time Edge Detection Comparison - TypeScript Implementation</p>
+
+
+
+    <div class="images-container">
+        <div class="image-section">
+            <h3>🎬 Raw Camera Feed</h3>
+            <div class="image-wrapper">
+                <img id="raw-display" src="raw_frame.jpg" alt="Add raw_frame.jpg"
+                     onerror="this.alt='Raw frame not found'">
+            </div>
+        </div>
+        <div class="image-section">
+            <h3>⚡ Edge Detection Output</h3>
+            <div class="image-wrapper">
+                <img id="edge-display" src="edge_frame.jpg" alt="Add edge_frame.jpg"
+                     onerror="this.alt='Edge frame not found'">
+            </div>
+        </div>
+    </div>
+
     <div class="stats">
-        <div class="stat-item"><strong>Resolution:</strong> <span id="resolution">N/A</span></div>
-        <div class="stat-item"><strong>FPS:</strong> <span id="fps">N/A</span></div>
-        <div class="stat-item"><strong>Processing:</strong> <span id="processing">Edge Detection</span></div>
-        <div class="stat-item"><strong>Status:</strong> <span id="status">Ready</span></div>
+        <h3>📊 Frame Statistics</h3>
+        <div class="stats-grid">
+            <div class="stat-item">
+                <div class="stat-label">Resolution</div>
+                <div class="stat-value">640 × 480</div>
+            </div>
+            <div class="stat-item">
+                <div class="stat-label">FPS</div>
+                <div class="stat-value">31</div>
+            </div>
+
+            <div class="stat-item">
+                <div class="stat-label">Processing Time</div>
+                <div class="stat-value">~23ms</div>
+            </div>
+            <div class="stat-item">
+                <div class="stat-label">Rendering</div>
+                <div class="stat-value">OpenGL ES 2.0</div>
+            </div>
+
+        </div>
+    </div>
+
+    <div class="tech-stack">
+        <h4>🛠️ Technology Stack</h4>
+        <div class="tech-tags">
+            <span class="tech-tag">Android (Kotlin)</span>
+            <span class="tech-tag">C++ (JNI/NDK)</span>
+            <span class="tech-tag">OpenGL ES 2.0</span>
+            <span class="tech-tag">Camera2 API</span>
+            <span class="tech-tag">TypeScript</span>
+            <span class="tech-tag">HTML5</span>
+            <span class="tech-tag">Edge Detection </span>
+            <span class="tech-tag">Real-time Processing</span>
+        </div>
     </div>
 </div>
+
 <script type="module" src="dist/viewer.js"></script>
 </body>
 </html>
